Feat: implementing use cases in swagger
